--- a/IVGDb/IVGDb/Views/Shared/_Layout.cshtml
+++ b/IVGDb/IVGDb/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - IVGDb</title>
+    <title>GameMode</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,13 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("IVGDb", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("GameMode", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                </ul>
+                </ul>                 
                 <input type="text" id="Search-bar" placeholder="Find Games, Developers, and more..." />
-                @*<button type="submit" id="Search-btn" name="search-submit"></button>*@
+                <button type="submit" id="Search-btn" name="search-submit">
+                    <span id="Search-btn-span"><img src="~/Images/maglss.png" /></span>
+                </button>                
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -32,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - IVGDb</p>
+            <p>&copy; @DateTime.Now.Year - GameMode</p>
         </footer>
     </div>
 
