--- a/IVGDb/IVGDb/Views/Home/Index.cshtml
+++ b/IVGDb/IVGDb/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -15,15 +16,15 @@
                     <div class="item active">
 
                         <div class="bannerImage">
-                            <a href="#"><img src="http://placehold.it/960x405" alt=""></a>
+                            <a href="~/VideoGame/ShowGame/1"><img src="http://img.gamefaqs.net/box/9/2/3/50923_front.jpg" alt="" width="640" height="405"></a>
                         </div>
 
                         <div class="caption row-fluid">
                             <div class="span4">
-                                <h3>Game Title #1</h3>
+                                <h3>Megaman X2</h3>
                             </div>
                             <div class="span8">
-                                <p>This contains the brief summary of the game.</p>
+                                <p>Arguably the greatest Megaman entry in the entire series.</p>
                             </div>
                         </div>
 
@@ -32,15 +33,15 @@
                     <div class="item">
 
                         <div class="bannerImage">
-                            <a href="#"><img src="http://placehold.it/960x405" alt=""></a>
+                            <a href="#"><img src="http://images51.fotki.com/v282/photos/2/1851932/10314675/supercastlevania4boxart-vi.jpg" alt="" width="640" height="405"></a>
                         </div>
 
                         <div class="caption row-fluid">
                             <div class="span4">
-                                <h3>Game Title #2</h3>
+                                <h3>Super Castlevania 4</h3>
                             </div>
                             <div class="span8">
-                                <p>This contains the brief summary of the game.</p>
+                                <p>Simon Belmont is on the hunt for Dracula's head!</p>
                             </div>
                         </div>
 
@@ -49,15 +50,15 @@
                     <div class="item">
 
                         <div class="bannerImage">
-                            <a href="#"><img src="http://placehold.it/960x405" alt=""></a>
+                            <a href="#"><img src="http://fantasyanime.com/squaresoft/ctbox_front.jpg" alt="" width="640" height="405"></a>
                         </div>
 
                         <div class="caption row-fluid">
                             <div class="span4">
-                                <h3>Game Title #3</h3>
+                                <h3>Chrono Trigger</h3>
                             </div>
                             <div class="span8">
-                                <p>This contains the brief summary of the game.</p>
+                                <p>The greatest RPG, and videogame, in the history of videogames.</p>
                             </div>
                         </div>
 
