--- a/IVGDb/IVGDb/Views/Shared/_Layout.cshtml
+++ b/IVGDb/IVGDb/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameMode</title>
+    <title>IVGDb</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("GameMode", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("IVGDb", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -25,7 +25,7 @@
                 <input type="text" id="Search-bar" placeholder="Find Games, Developers, and more..." />
                 <button type="submit" id="Search-btn" name="search-submit">
                     <span id="Search-btn-span"><img src="~/Images/maglss.png" /></span>
-                </button>                
+                </button>              
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -34,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - GameMode</p>
+            <p>&copy; @DateTime.Now.Year - IVGDb</p>
         </footer>
     </div>
 
