Added ShowGame control

--- a/IVGDb/IVGDb/Views/Home/Index.cshtml
+++ b/IVGDb/IVGDb/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                     <div class="item active">
 
                         <div class="bannerImage">
-                            <a href="~/VideoGame/ShowGame/1"><img src="http://img.gamefaqs.net/box/9/2/3/50923_front.jpg" alt="" width="640" height="405"></a>
+                            <a href="~/VideoGame/ShowGame?gameID=1"><img src="http://img.gamefaqs.net/box/9/2/3/50923_front.jpg" alt="" width="640" height="405"></a>
                         </div>
 
                         <div class="caption row-fluid">
@@ -33,7 +33,7 @@
                     <div class="item">
 
                         <div class="bannerImage">
-                            <a href="#"><img src="http://images51.fotki.com/v282/photos/2/1851932/10314675/supercastlevania4boxart-vi.jpg" alt="" width="640" height="405"></a>
+                            <a href="~/VideoGame/ShowGame?gameID=2"><img src="http://images51.fotki.com/v282/photos/2/1851932/10314675/supercastlevania4boxart-vi.jpg" alt="" width="640" height="405"></a>
                         </div>
 
                         <div class="caption row-fluid">
@@ -50,7 +50,7 @@
                     <div class="item">
 
                         <div class="bannerImage">
-                            <a href="#"><img src="http://fantasyanime.com/squaresoft/ctbox_front.jpg" alt="" width="640" height="405"></a>
+                            <a href="~/VideoGame/ShowGame?gameID=3"><img src="http://fantasyanime.com/squaresoft/ctbox_front.jpg" alt="" width="640" height="405"></a>
                         </div>
 
                         <div class="caption row-fluid">
