--- a/IVGDb/IVGDb/Views/Shared/_SearchBar.cshtml
+++ b/IVGDb/IVGDb/Views/Shared/_SearchBar.cshtml
@@ -1,4 +1,7 @@
-﻿@using (Html.BeginForm("Search", "Search", FormMethod.Post))
+﻿@using (Html.BeginForm("GetGame", "VideoGame", FormMethod.Post, new { id = "Search-bar-form" }))
 {
-    <input type="text" name="searchbar" /><button type="submit" name="Search"><img src="~/Images/maglss.png" /></button>
+    <input type="text" id="Search-bar" name="title" placeholder="Find Games, Developers, and more..." />
+    <button type="submit" id="Search-btn" name="search-submit">
+        <span id="Search-btn-span"><img src="~/Images/maglss.png" /></span>
+    </button>
 }
