--- a/IVGDb/IVGDb/Views/VideoGame/Results.cshtml
+++ b/IVGDb/IVGDb/Views/VideoGame/Results.cshtml
@@ -56,6 +56,7 @@
             <h3 class="panel-title">Can't find what you searched for?</h3>
         </div>
         <div class="panel-body">
+            <a href="~/VideoGame/AddNewGame" class="btn btn-success">Add Game to Database!</a>
             Help us grow our database! Click here to log in and start adding more games.
         </div>
     </div>
