--- a/IVGDb/IVGDb/Views/VideoGame/Results.cshtml
+++ b/IVGDb/IVGDb/Views/VideoGame/Results.cshtml
@@ -16,7 +16,7 @@
             <div class="results-item">
                 <div class="results-heading">
                     <div class="results-heading-title">
-                        <a>@item.Title</a>
+                        <a href="~/VideoGame/ShowGame?gameID=@item.GameID">@item.Title</a>
                     </div>
                     <div class="results-console">
                         <span class="label label-danger">@item.Console</span>
