--- a/IVGDb/IVGDb/Views/User/Manage.cshtml
+++ b/IVGDb/IVGDb/Views/User/Manage.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Manage";
 }
 
-@if(Session["LoggedIn"] == "true")
+@if(User.Identity.Name.Length > 0)
 { 
     <div class="row" id="User-profile">
         <div class="col-sm-3">
